# forge-terminal

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/agents/: backend.md  data-infra.md  frontend.md  team-lead.md
.claude/hooks/: inject-gotchas.sh  run-tests.sh
.claude/knowledge-base/: INDEX.md
.claude/knowledge-base/gotchas/: data-infra.md  frontend.md
.claude/rules/: hard-rules.md
.claude/skills/dev/: SKILL.md
.claude/skills/kb/: SKILL.md  maintain.md  setup.md
.claude/skills/ops/: SKILL.md
backend/crates/protocol-tag-scanner/: Cargo.toml
backend/crates/protocol-tag-scanner/src/: lib.rs
backend/crates/protocol-wire-core/: Cargo.toml
backend/crates/protocol-wire-core/src/: control.rs  frame.rs  lib.rs  stream.rs  token.rs  trace.rs
backend/crates/session-api/: Cargo.toml
backend/crates/session-api/src/: lib.rs  pty_bridge.rs  registry.rs
backend/crates/session-contracts/: Cargo.toml
backend/crates/session-contracts/src/: lib.rs
backend/crates/session-pty-core/: Cargo.toml
backend/crates/session-pty-core/src/: lib.rs
backend/crates/session-pty-native/: Cargo.toml
backend/crates/session-pty-native/src/: lib.rs
backend/crates/session-pty-recorder/: Cargo.toml
backend/crates/session-pty-recorder/src/: lib.rs
backend/crates/session-pty-router/: Cargo.toml
backend/crates/session-pty-router/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: tauri.ts
frontend/src/lib/components/: FileExplorer.svelte  FileIcon.svelte  FileTree.svelte  MachineConfig.svelte  Settings.svelte  Terminal.svelte
frontend/src/lib/stores/: theme.ts
frontend/src/lib/terminal/: WireTerminal.svelte  client.ts  frame.ts  index.ts  tokens.ts
frontend/src/routes/: +page.svelte
knowledge-base/: INDEX.md
knowledge-base/gotchas/: backend.md
knowledge-base/planning/: current.md
knowledge-base/project/: architecture.md  data-model.md  integrations.md
knowledge-base/security/: auth-model.md  secrets.md
knowledge-base/testing/: critical-paths.md  dependencies.md  strategy.md
tooling/: bench-build.sh  build-network.sh  build.sh  check.sh  clean.sh  dev.sh  fast-build.sh  install-deps.sh  launch-local.sh  launch-network.sh  start-nats.sh  trim.sh
