[workspace]
resolver = "2"
members = [
    "backend/crates/session-contracts",
    "backend/crates/session-pty-core",
    "backend/crates/session-pty-native",
    "backend/crates/session-pty-router",
    "backend/crates/session-pty-recorder",
    "backend/crates/session-api",
    "frontend/src-tauri",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Conner Schmidt"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1"
chrono = { version = "0.4.42", features = ["serde"] }
libc = "0.2"
nix = { version = "0.29", features = ["process", "term", "ioctl"] }
parking_lot = "0.12"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# From forge-communication (sibling repo)
protocol-wire-core = { path = "../forge-communication/crates/wire-core" }
protocol-tag-scanner = { path = "../forge-communication/crates/tag-scanner" }
forge-node = { path = "../forge-communication/crates/forge-node" }
