[package]
name = "protocol-tag-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PTY stdout tag scanner: extracts structured [{tag}] patterns into wire frames"

[dependencies]
protocol-wire-core = { path = "../protocol-wire-core" }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
