[package]
name = "protocol-wire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol core types: frames, token types, streams, control messages"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
