[package]
name = "session-pty-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
