[package]
name = "session-pty-native"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
session-pty-core = { path = "../session-pty-core" }
async-trait.workspace = true
nix.workspace = true
libc.workspace = true
tokio = { workspace = true, features = ["fs", "process", "io-util", "time", "rt"] }
tracing.workspace = true
