[package]
name = "session-pty-recorder"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
session-pty-core = { path = "../session-pty-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
uuid.workspace = true
